--- a/css/styles.css
+++ b/css/styles.css
@@ -6,16 +6,63 @@
     width:60%;
     margin: 0 auto;
 }
-.navBar {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    align-content:center;
-    margin: 2% 0px;
-    flex-wrap: wrap;
+
+@media only screen and (max-width: 500px) {
+    #container {
+        width: 90%;
+    } 
+}
+header {
+    display: flex;
+    justify-content: left;
+    align-items: left;
     width: 100%;
 }
 
+@media only screen and (max-width:500px) {
+    header {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        margin-top: 2%;
+    }
+}
+
+.navBar {
+    display:flex;
+    align-items: left;
+    justify-content:left;
+    margin-top: 2% 0px;
+    flex-wrap: wrap;
+    width: 90%;
+}
+
+@media only screen and (max-width: 500px) {
+ .navBar {
+     display: flex;
+     flex-direction: row;
+     margin-top: 10% 0;
+     width: 100%;
+ }   
+}
+
+.logo {
+    display:flex;
+    margin-top: 1%;
+    width: 10%;
+    align-self: center;
+    
+}
+
+@media only screen and (max-width:500px) {
+    .logo {
+    justify-content: center;
+    border-bottom: 1px solid black;
+    width: 100%;
+    padding-bottom: 3%;
+}
+}
 
 a {
     color: #049BBF;
@@ -37,6 +84,17 @@ a:hover {
     color: gray;
 }
 
+@media only screen and (max-width: 500px) {
+    .navSpace {
+        display: flex;
+        flex-direction: column-reverse;
+        font-size: 1em;
+        padding-bottom: 2%;
+        border-bottom: 1px solid black;
+        width: 100%;
+    } 
+}
+
 .navSpace:hover {
     color:red;
 }
@@ -51,12 +109,6 @@ a:hover {
     color: #C457D8
 }
 
-.logo {
-    display:flex;
-    margin-top: 1%;
-    width: 13vw;
-    
-}
 
 .logo.product {
     padding: 10%;
@@ -82,6 +134,7 @@ margin: 0px 0px 0px 10%;
 width: 40%;
 }
 
+
 .jumbotron.left {
     display: flex;
     flex-direction: column;
@@ -90,7 +143,24 @@ width: 40%;
     width: 40%;
     margin: 0px 10% 0px 0px;
     }
-h1 {
+
+    @media only screen and (max-width:500px) {
+
+        .jumbotron {
+            display: flex;
+            flex-direction: column;
+        }
+        
+            .jumbotron.right {
+                display: none;
+            }
+        
+            .jumbotron.left {
+                width: 100%;
+            }
+        }
+        
+    h1 {
     font-family: 'Bangers';
     font-size: 5vw;
     display: flex;
@@ -98,6 +168,12 @@ h1 {
     align-items: center;
     margin: 0px;
     justify-content: center;
+}
+
+@media only screen and (max-width:900px) {
+    h1 {
+        font-size: 3em;
+    }
 }
 
 #button{
@@ -113,11 +189,23 @@ h1 {
     width: 30%;
 }
 
-p, footer, address  {
+@media only screen and (max-width:500px) {
+    #button {
+        font-size: 1.2em;
+        margin-top: 3%;
+    }
+}
+
+p, address  {
     display:flex;
     font-family: 'Titillium Web';
     font-size: 14px;
-    margin-top: 20px;
+    margin-top: 5px;
+}
+
+footer {
+    margin-top: 10%;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 ul {
@@ -135,6 +223,13 @@ hr {
     display: flex;
 }
 
+@media only screen and (max-width:500px) {
+    .fabout {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 .fleft {
     padding: 0px 20px 0px 1px;
 }
@@ -142,6 +237,7 @@ h2 {
 font-family: 'Bangers';
 font-size: 20px;
 text-align: left;
+margin: 0;
 }
 
 h2.product {
@@ -158,8 +254,20 @@ h2.product {
     padding: 20px 0px;
 }
 
+@media only screen and (max-width:500px) {
+    .bottom-rung {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 .middle {
 padding: 0 20px;
+}
+
+@media only screen and (max-width:500px) {
+    .middle {padding: 0;
+    }
 }
 
 .contact {
@@ -228,14 +336,4 @@ padding: 0 20px;
     margin: 0px 0px 0px 1%;
 }
 
-@media only screen and (max-width: 800px) {
-    .main, .baseline {
-      background-color: lightblue;
-      width: 100%;
-    }
-    #container {
-        width: 100%;
-    }
-  }
 
-  
